# recipes

anki-templates/technical-note/: README.md  back.html  front.html  styling.css
anki/anki-notes/agent/: learn-claude-code.txt
anki/anki-templates/minimal-technical-note/: README.md  back.html  front.html  styling.css
courses/al-brooks-price-action/: P01-价格形态.md  P02-我的设置.md  P03-程序化交易.md  P04-成功交易者的人格特质.md  README.md
courses/al-brooks-price-action/transcripts/P01/: meta.json  segments.json  transcript.srt  transcript.txt
courses/al-brooks-price-action/transcripts/P02/: meta.json  segments.json  transcript.srt  transcript.txt
courses/al-brooks-price-action/transcripts/P02_en/: meta.json  (+3 more)
courses/mit-18-06sc-linear-algebra-fall-2011/: README.md  l03-the-geometry-of-linear-equations.md  l03-the-geometry-of-linear-equations.zh.md  l04-an-overview-of-key-ideas.md  l04-an-overview-of-key-ideas.zh.md  l05-elimination-with-matrices.md  l05-elimination-with-matrices.zh.md  l06-multiplication-and-inverse-matrices.md  l06-multiplication-and-inverse-matrices.zh.md  l07-factorization-into-a-lu.md  l07-factorization-into-a-lu.zh.md  l08-transposes-permutations-vector-spaces.md  l08-transposes-permutations-vector-spaces.zh.md
courses/res-6-012-introduction-to-probability-spring-2018/: Lecture-01-Probability-Models-and-Axioms.md  第01讲-概率模型与公理.md
docker/anki-server/: .env.example  Dockerfile  README.md  docker-compose.yml
rust/concurrency/: Cargo.toml
rust/concurrency/src/: arc.rs  channel.rs  fence.rs  rel_acq.rs  rel_acq_unsafe.rs  relaxed.rs  seq_cst.rs  spin_lock.rs
(+90 files in other folders)
